# dragon

./: .clang-format  .gitignore  .gitmodules  .wci.yml  BUILDING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  ISSUE_52_FIX_SUMMARY.md  Jenkinsfile.py310.off  Jenkinsfile.py311.off  Jenkinsfile.py312  Jenkinsfile.sle15sp1  Jenkinsfile.sle15sp1.ver2  Jenkinsfile.sle15sp1.ver3  LICENSE  NEXT_STEPS_TO_SUBMIT_FIX.md  README.md  README.rst  SYSTEM_TESTS.md  index.html  pyproject.toml  test_configure_training_group_fix.py
src/: Doxyfile  Makefile  constraints.txt  extra-requirements.txt  pyproject.toml  requirements.txt  requirements_examples.txt  setup.py
src/dragon/: .gitignore  __init__.py  __main__.py  channels.pxd  dtypes_inc.pxd  managed_memory.pxd  pydragon_channels.pyx  pydragon_dpmix.pyx  pydragon_dtypes.pyx  pydragon_fli.pyx  pydragon_heap.pyx  pydragon_heapmanager.pyx  pydragon_lock.pyx  pydragon_managed_memory.pyx  pydragon_perf.pyx  pydragon_pmod.pyx  pydragon_utils.pyx  version.py
src/dragon/ai/: __init__.py  collective_group.py
src/dragon/cli/: __init__.py  __main__.py  completion.py
src/dragon/data/: __init__.py
src/dragon/dlogging/: log_setup.py  pydragon_logging.pyx  util.py
src/dragon/globalservices/: api_setup.py  channel.py  channel_int.py  group.py  group_int.py  node.py  node_int.py  policy_eval.py  pool.py  pool_int.py  process.py  process_int.py  server.py  startup.py
src/dragon/infrastructure/: channel_desc.py  config.py  connection.py  debug_support.py  facts.py  gpu_desc.py  group_desc.py  messages.py  minconnection.py  node_desc.py  parameters.py  policy.py  pool_desc.py  process_desc.py  standalone_conn.py  util.py  watchers.py
src/dragon/jupyter/: server.py
src/dragon/launcher/: __init__.py  backend.py  dragon_multi_be.py  dragon_multi_fe.py  dragon_single.py  frontend.py  launch_multi_ls.py  launch_selector.py  launchargs.py  network_config.py  pydragon_pmsgqueue.pyx  util.py
src/dragon/localservices/: Makefile  dragon_popen_wrapper.c  local_svc.py  manager.py  options.py  process_desc.py  server.py
src/dragon/mpbridge/: __init__.py  (+13 more)
src/include/: Makefile
src/lib/: Makefile  _bcast.h  _bitset.h  _blocks.h  _channels.h  _channelsets.h  _ddict.h  _ddict.hpp  _fli.h  _hashtable.h  _heap_manager.h  _hexdump.h  _managed_memory.h  _pals.h  _pmix.h  _pmod.h  _queue.h  _shared_lock.h  _utils.h  barrier.cpp  bcast.c  bitset.c  blocks.c  channels.c  channels_messages.c  channelsets.c  ddict.cpp  dictionary.cpp  err.h  exceptions.cpp  fli.c  hashtable.c  heap_manager.c  hexdump.c  hostid.h  logging.c  logging.h  managed_memory.c  message_defs.capnp  message_tcs_to_enum.py  (+24 more)
src/lmod/: Makefile  dragon-dev.lua  dragon-python-dev.lua  dragon.lua
src/modulefiles/: Makefile  dragon  dragon-dev  dragon-python-dev
src/pkg/: CHANGELOG.md  INSTALL.md  LICENSE.md  Makefile  README.md  RELEASE_NOTES.md
src/tools/: dragon-cleanup  dragon-config  dragon-env  dragon-flame-graph  dragon-node-cleanup  dragon_cleanup.py
(+1681 files in other folders)
