[build-system]
requires = [
    "setuptools>=70.0.0",
    "Cython>=3.0.12",
    "pyclean>=3.7.0"

]
build-backend = "setuptools.build_meta:__legacy__"

[tool.setuptools]
include-package-data = false

[project]
name = "dragonhpc"
authors = [
    {name="Dragon Team", email="dragonhpc@hpe.com"}
]

license-files = ["pkg/LICENSE.md"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux"
]
description = "Dragon is a composable distributed run-time for managing dynamic processes, memory, and data at scale through high-performance communication objects."
readme = "pkg/README.md"
requires-python=">=3.11"
dynamic = [
    "version",
    "dependencies",
    "entry-points",
    "scripts",
    "optional-dependencies",
]


[project.urls]
Homepage = "http://dragonhpc.org/portal/index.html"
Documentation = "https://dragonhpc.github.io/dragon/doc/_build/html/index.html"
Repository = "https://github.com/DragonHPC/dragon"

[tool.black]
line-length = 120
force-exclude = "return_codes_map_maker.py" # Black formatter wants to insert spaces where they're undesirable