[build-system]
requires = ["setuptools~=65.6", "wheel", "Cython~=3.0a"]
build-backend = "setuptools.build_meta"

#[project]
#name = "dragonhpc"
#version = "0.0.1"
#authors = [
#  { name="Dragon Team", email="dragonhpc@hpe.com" }
#]
#description = "Dragon is a composable distributed run-time for managing dynamic processes, memory, and data at scale through high-performance communication objects."
#readme = "README.rst"
#requires-python = ">=3.9"
#classifiers = [
#    "Programming Language :: Python :: 3",
#    "License :: OSI Approved :: MIT License",
#    "Operating System :: POSIX :: Linux"
#]
#
#[project.urls]
#"Homepage" = "https://github.com/dragonhpc/dragon"
#"Bug Tracker" = "https://github.com/dragonhpc/dragon/issues"
